--- a/template/indexTemplate.html
+++ b/template/indexTemplate.html
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="effects/particles.js"></script>
-    <script src="main.js"></script>
+    <script src="../effectCode/particles.js"></script>
+    <script src="mainTemplate.js"></script>
     <title>Effect Maker</title>
 </head>
 <body>
