--- a/template/indexTemplate.html
+++ b/template/indexTemplate.html
@@ -16,16 +16,19 @@
 </head>
 <body>
 <div id="main" style="width: 100vw; height:100vh;">
+    <!--MENU-->
     <div id="leftMenu">
         <div class="menu" id="title">
             <p>Effect Maker</p>
         </div>
+        <!--PRESETS-->
         <div class="menu" id="presets">
             <div class="circle icon">
                 <i class="material-icons md-light md-36">bookmark</i>
             </div>
             <div class="menuText">Preset Options</div>
         </div>
+        <!--PARAMETERS-->
         <div class="menu" id="paramSettings">
             <div class="circle icon">
                 <i class="material-icons md-light md-36">build</i>
@@ -45,6 +48,7 @@
             <output for="maxSizeSlider" id="maxSizeValue">20</output><br>
             <input type="range" min="0" max="100" value="15" oninput="updateMaxSizeOuput(value)" id="maxSizeSlider"><br>
         </div>
+        <!--SHOWCODE BUTTON-->
         <div class="menu" id="showCode">
             <div class="circle icon">
                 <i class="material-icons md-light md-36">code</i>
