--- a/template/indexTemplate.html
+++ b/template/indexTemplate.html
@@ -22,14 +22,14 @@
             <p>Effect Maker</p>
         </div>
         <!--PRESETS-->
-        <div class="menu" id="presets">
+        <div class="menu presets">
             <div class="circle icon">
                 <i class="material-icons md-light md-36">bookmark</i>
             </div>
             <div class="menuText">Preset Options</div>
         </div>
         <!--PARAMETERS-->
-        <div class="menu" id="paramSettings">
+        <div class="menu paramSettings">
             <div class="circle icon">
                 <i class="material-icons md-light md-36">build</i>
             </div>
