changed started preview images in css

--- a/style.css
+++ b/style.css
@@ -123,13 +123,13 @@ a {
 }
 
 #imgPreview1{
-    background-image: url('images/cupcake1.png');
+    background-image: url('images/sparkle1.png');
 }
 #imgPreview2{
-    background-image: url('images/cupcake2.png');
+    background-image: url('images/sparkle2.png');
 }
 #imgPreview3{
-    background-image: url('images/cupcake3.png');
+    background-image: url('images/sparkle3.png');
 }
 
 .textInput {
